GoalTracker/force-app/main/default/objects/Award__c/Award__c.object-meta.xml
<CustomObject>
    <description>Institutional Partnerships Contract Award Object</description>
    <label>Award</label>
    <nameField>
        <label>Award Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>