GoalTracker/force-app/main/default/objects/Award__c/fields/Award_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_End_Date__c</fullName>
    <label>Award End Date</label>
    <type>Date</type>
</CustomField>