GoalTracker/force-app/main/default/objects/Award__c/fields/Award_Number__c.field-meta.xml
<CustomField>
    <fullName>Award_Number__c</fullName>
    <label>Award Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>