GoalTracker/force-app/main/default/objects/Award__c/fields/Award_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Start_Date__c</fullName>
    <label>Award Start Date</label>
    <type>Date</type>
</CustomField>