GoalTracker/force-app/main/default/objects/Award__c/fields/Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funded_Amount__c</fullName>
    <label>Funded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>